--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --ui tdd ./tests/"
+    "test": "gulp; mocha --ui tdd ./tests/"
   },
   "repository": {
     "type": "git",
@@ -19,15 +19,28 @@
   "dependencies": {
     "express": "^4.13.3",
     "phpjs": "^1.3.2",
+    "purl": "^1.0.4",
     "socket.io": "^1.3.6"
   },
   "devDependencies": {
-    "mocha": "^2.3.0"
-    },
-    "baobabConfig":{
-        "baobabConfig": 8080,
-        "frontendDocumentRoot": "./tests/htdocs/",
-        "backendJs": "./tests/backendJs/main.js",
-        "backendApis": "./tests/backendJs/apis/"
-    }
+    "es6-promise": "^3.0.2",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "gulp-twig": "^0.3.0",
+    "gulp-uglify": "^1.2.0",
+    "mocha": "^2.3.0",
+    "phantomjs": "^1.9.18",
+    "selenium-webdriver": "^2.46.1"
+  },
+  "baobabConfig": {
+    "baobabConfig": 8080,
+    "frontendDocumentRoot": "./tests/htdocs/",
+    "backendJs": "./tests/backendJs/main.js",
+    "backendApis": "./tests/backendJs/apis/"
+  }
 }
