--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/main.js",
   "scripts": {
     "start": "gulp watch;",
-    "up": "node ./lib/cmd/server.js",
+    "up": "node ./tests/backendJs/server.js",
     "test": "gulp; mocha --ui tdd ./tests/"
   },
   "repository": {
@@ -25,7 +25,9 @@
     "socket.io": "^1.3.6"
   },
   "devDependencies": {
+    "body-parser": "^1.15.2",
     "es6-promise": "^3.0.2",
+    "express-session": "^1.14.2",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-browserify": "^0.5.1",
